--- a/websites/about.html
+++ b/websites/about.html
@@ -15,7 +15,7 @@
 
   <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/contact.html">Contact</a>
 
-  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/resume.html">Resume</a>
+  <a href="websites/resume.html">Resume</a>
 
   <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/project.html">Projects</a>
 
