--- a/websites/about.html
+++ b/websites/about.html
@@ -15,8 +15,8 @@
 
   <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/contact.html">Contact</a>
 
-  <a href="websites/resume.html">Resume</a>
-
+  <a href="https://daisyavila.github.io/websites/resume.html">Resume</a>
+           
   <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/project.html">Projects</a>
 
   <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/about.html">Food</a>
