--- a/websites/about.html
+++ b/websites/about.html
@@ -11,15 +11,15 @@
 
 <nav class="nav">
 
-  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/index.html">Home</a>
+  <a href="https://daisyavila.github.io/websites/index.html">Home</a>
 
-  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/contact.html">Contact</a>
+  <a href="https://daisyavila.github.io/websites/contact.html">Contact</a>
 
   <a href="https://daisyavila.github.io/websites/resume.html">Resume</a>
            
-  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/project.html">Projects</a>
+  <a href="https://daisyavila.github.io/websites/project.html">Projects</a>
 
-  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/about.html">Food</a>
+  <a href="https://daisyavila.github.io/websites/about.html">Food</a>
 
 </nav>
 
