--- a/websites/project.html
+++ b/websites/project.html
@@ -13,15 +13,15 @@
 
 <nav class="nav">
 
-  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/index.html">Home</a>
+  <a href="websites/index.html">Home</a>
 
-  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/contact.html">Contact</a>
+    <a href="websites/contact.html">Contact</a>
 
-  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/resume.html">Resume</a>
+    <a href="websites/resume.html">Resume</a>
 
-  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/project.html">Projects</a>
+    <a href="websites/project.html">Projects</a>
 
-  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/about.html">Food</a>
+    <a href="websites/about.html">Food</a>
 
 </nav>
 
