--- a/websites/index.html
+++ b/websites/index.html
@@ -16,7 +16,7 @@
 
     <a href="websites/index.html">Home</a>
 
-    <a href="websites/contact.html">Contact</a>
+    <a href="https://daisyavila.github.io/websites/contact.html">Contact</a>
 
     <a href="websites/resume.html">Resume</a>
 
