--- a/websites/contact.html
+++ b/websites/contact.html
@@ -13,13 +13,15 @@
 
 <nav class="nav">
 
-  <a href="websites/index.html">Home</a>
+ <a href="https://daisyavila.github.io/websites/index.html">Home</a>
 
-    <a href="websites/contact.html">Contact</a>
+  <a href="https://daisyavila.github.io/websites/contact.html">Contact</a>
 
-    <a href="websites/resume.html">Resume</a>
+  <a href="https://daisyavila.github.io/websites/resume.html">Resume</a>
 
-    <a href="websites/project.html">Projects</a>
+  <a href="https://daisyavila.github.io/websites/project.html">Projects</a>
+
+  <a href="https://daisyavila.github.io/websites/about.html">Food</a>
 
     <a href="websites/about.html">Food</a>
 </nav>
