--- a/websites/project.html
+++ b/websites/project.html
@@ -26,18 +26,18 @@
 </nav>
 
 <div class="photos">
-  <div class="reg"><img src="websites/assets/photo1.jpg"></div>
-  <div class="reg"><img src="websites/assets/photo2.jpg"></div>
-  <div class="reg"><img src="websites/assets/photo3.jpg"></div>
-  <div class="reg"><img src="websites/assets/photo4.jpg"></div>
-  <div class="reg"><img src="websites/assets/photo5.jpg"></div>
-  <div class="reg"><img src="websites/assets/photo6.jpg"></div>
-  <div class="reg"><img src="websites/assets/photo7.jpg"></div>
-  <div class="reg"><img src="websites/assets/photo8.jpg"></div>
-  <div class="reg"><img src="websites/assets/photo9.jpg"></div>
-  <div class="reg"><img src="websites/assets/photo10.jpg"></div>
-  <div class="reg"><img src="websites/assets/photo11.jpg"></div>
-  <div class="reg"><img src="websites/assets/photo12.jpg"></div>
+  <div class="reg"><img src="websites/assets/assets/photo1.jpg"></div>
+  <div class="reg"><img src="websites/assets/assets/photo2.jpg"></div>
+  <div class="reg"><img src="websites/assets/assets/photo3.jpg"></div>
+  <div class="reg"><img src="websites/assets/assets/photo4.jpg"></div>
+  <div class="reg"><img src="websites/assets/assets/photo5.jpg"></div>
+  <div class="reg"><img src="websites/assets/assets/photo6.jpg"></div>
+  <div class="reg"><img src="websites/assets/assets/photo7.jpg"></div>
+  <div class="reg"><img src="websites/assets/assets/photo8.jpg"></div>
+  <div class="reg"><img src="websites/assets/assets/photo9.jpg"></div>
+  <div class="reg"><img src="websites/assets/assets/photo10.jpg"></div>
+  <div class="reg"><img src="websites/assets/assets/photo11.jpg"></div>
+  <div class="reg"><img src="websites/assets/assets/photo12.jpg"></div>
 
 </body>
 
