--- a/websites/index.html
+++ b/websites/index.html
@@ -25,7 +25,7 @@
   <a href="https://daisyavila.github.io/websites/about.html">Food</a>
 
   </nav>
-  <img id="photo" src="assets/daisy.jpg" alt="a pic of me" width="180" height="300">
+  <img id="photo" src="assets/daisy.JPG" alt="a pic of me" width="180" height="300">
     <h1>My Story</h1>
 
     <p> My parents were born in a small town near Chiuahua, Mexico. They both grew up poor and didn't have much. My mother had no father growing up and she helped my grandmother take care of her other 7 children. My father on the other hand helped my grandfather in the fields to help him provide for the family. When my parents were teenagers they immigrated to the United States. They had a very tough start to their new lives in the United States. They had to live with my aunt due to the fact that they didn't have enough money to ppurchase or even rent a house. When my mom was 20 she had her first child. They struggled to provide but were able to keep my brother healthy and spoiled. At age 24 they had their second child and were able to provide a bit more. Once they were stable enough they had me when my mom was at age 30. We had a house big enough for all of us located in Redwood City, CA. At the age on 12 we moved to Castro Valley, CA. It was a hard move for me because we had absolutely no family in Castro Valley. I have adjusted and now I love where I am in life.
