--- a/websites/contact.html
+++ b/websites/contact.html
@@ -13,33 +13,19 @@
 
 <nav class="nav">
 
- <a href="https://daisyavila.github.io/websites/index.html">Home</a>
+  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/index.html">Home</a>
 
-  <a href="https://daisyavila.github.io/websites/contact.html">Contact</a>
+  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/contact.html">Contact</a>
 
-  <a href="https://daisyavila.github.io/websites/resume.html">Resume</a>
+  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/resume.html">Resume</a>
 
-  <a href="https://daisyavila.github.io/websites/project.html">Projects</a>
+  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/project.html">Projects</a>
 
-  <a href="https://daisyavila.github.io/websites/about.html">Food</a>
+  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/about.html">Food</a>
 
 </nav>
-<form>
 
-      <label for="name"> Name </label>
-     <input type="text" id="name" placeholder="first and last name">
-<br>
-     <label for="email">Email </label>
-     <input type="email" id="email" >
-<br>
-     <label for="message"> Message </label>
-     <textarea id="message"></textarea>
-<br>
-    <button type="submit">Submit</button>
-
- </form>
-
-
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdh5fTiBBLxlcR9HvkGSz-QJMC2zdxK7Ll-R9OX8NRPLSfzlw/viewform?usp=pp_url" width="640" height="1206" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </body>
 
 </html>
