--- a/websites/project.html
+++ b/websites/project.html
@@ -24,7 +24,7 @@
   <a href="https://daisyavila.github.io/websites/about.html">Food</a>
 
 </nav>
-
+<h1> My favorite photos</h1>
 <div class="photos">
   <div class="reg"><img src="assets/photo1.jpg"></div>
   <div class="reg"><img src="assets/photo2.jpg"></div>
