--- a/websites/resume.html
+++ b/websites/resume.html
@@ -13,18 +13,19 @@
 
 <nav class="nav">
 
- <a href="https://daisyavila.github.io/websites/index.html">Home</a>
+  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/index.html">Home</a>
 
-  <a href="https://daisyavila.github.io/websites/contact.html">Contact</a>
+  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/contact.html">Contact</a>
 
-  <a href="https://daisyavila.github.io/websites/resume.html">Resume</a>
+  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/resume.html">Resume</a>
 
-  <a href="https://daisyavila.github.io/websites/project.html">Projects</a>
+  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/project.html">Projects</a>
 
-  <a href="https://daisyavila.github.io/websites/about.html">Food</a>
+  <a href="file:///C:/Users/SMASH%20Scholar/Desktop/websites/about.html">Food</a>
 
 </nav>
 
+<iframe src="resume/resume.pdf"></iframe>
 
 </body>
 
