--- a/websites/contact.html
+++ b/websites/contact.html
@@ -26,7 +26,7 @@
 
 </nav>
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdh5fTiBBLxlcR9HvkGSz-QJMC2zdxK7Ll-R9OX8NRPLSfzlw/viewform?usp=pp_url" width="640" height="1206" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdh5fTiBBLxlcR9HvkGSz-QJMC2zdxK7Ll-R9OX8NRPLSfzlw/viewform?embedded=true" width="640" height="1415" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </body>
 
 </html>
